# MC_methods

./: CMakeLists.txt  Piecewise_Linear_Density.cpp  Poisson.cpp  README.md  craps_MCS.cpp  craps_one_dist_MCS.cpp  craps_orig.cpp  paris_salon.cpp  saintPetersburg.cpp  saintPetersburg_MCS.cpp
